dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.52)

AC_INIT(ephy-plugins, 0.0.1, [FIXME--bug tracker?])

AC_CONFIG_SRCDIR(plugins)
AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AM_MAINTAINER_MODE

AM_DISABLE_STATIC
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)

AM_PROG_LIBTOOL

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

AC_PROG_INTLTOOL([0.22])

GNOME_DEBUG_CHECK
GNOME_COMPILE_WARNINGS(error)

dnl ********************************
dnl Internationalisation
dnl ********************************

ALL_LINGUAS=""

GETTEXT_PACKAGE=ephy-plugins-1.0
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
AM_GLIB_GNU_GETTEXT

dnl ********************************
dnl pkg config checks
dnl ********************************

EPIPHANY_REQUIRED=0.8.0

AC_SUBST(EPIPHANY_REQUIRED)

dnl fixme -- combine the dependencies of only the enabled plugins
PKG_CHECK_MODULES(EPIPHANY_DEPENDENCY, libxml-2.0 libglade-2.0 gtk+-2.0 epiphany-1.0 >= $EPIPHANY_REQUIRED)
AC_SUBST(EPIPHANY_DEPENDENCY_CFLAGS)
AC_SUBST(EPIPHANY_DEPENDENCY_LIBS)

dnl *******************************
dnl GConf related settings
dnl *******************************

dnl currently no plugin has any gconf settings

dnl Specify the gconf configuration source, 
dnl default to xml::$(sysconfdir)/gconf/gconf.xml.defaults

dnl AC_PATH_PROG(GCONFTOOL, gconftool-2, no)

dnl if test x"$GCONFTOOL" = xno; then
dnl  AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
dnl fi

dnl AM_GCONF_SOURCE_2

dnl *******************************
dnl Plugins
dnl *******************************

AC_ARG_ENABLE(plugin-sample, [  --enable-plugin-sample  (yes,no)
 	      	Enable sample plugin])
AM_CONDITIONAL(ENABLE_PLUGIN_SAMPLE, test "x$enable_plugin_sample" = "xyes")
 
dnl AC_ARG_ENABLE(plugin-gestures, [  --enable-plugin-gestures  (yes,no)
dnl  	      	Enable gestures plugin])
dnl AM_CONDITIONAL(ENABLE_PLUGIN_GESTURES, test "x$enable_plugin_gestures" = "xyes")

dnl *******************************
dnl Misc things
dnl *******************************

dnl uninstalled share dir to search data
dnl AC_DEFINE_UNQUOTED(SHARE_UNINSTALLED_DIR,"`pwd`/data",[path to source data dir])

dnl what about those? are they needed -- from gedit-plugins
dnl PLUGIN_LIBTOOL_FLAGS="-module -avoid-version"
dnl AC_SUBST(PLUGIN_LIBTOOL_FLAGS)

dnl *******************************
dnl share/data dir
dnl *******************************

dnl if test "x${datadir}" = 'x${prefix}/share'; then
dnl   if test "x${prefix}" = "xNONE"; then
dnl     AC_DEFINE_UNQUOTED(PLUGINS_DATA_DIR, "${ac_default_prefix}/share/${PACKAGE}", [Directory of data files])
dnl   else
dnl     AC_DEFINE_UNQUOTED(PLUGINS_DATA_DIR, "${prefix}/share/${PACKAGE}", [Directory of data files])
dnl   fi
dnl else
dnl   AC_DEFINE_UNQUOTED(PLUGINS_DATA_DIR, "${datadir}/${PACKAGE}", [Directory of data files])
dnl fi

dnl *******************************
dnl *******************************

AC_OUTPUT([
Makefile
po/Makefile.in
plugins/Makefile
plugins/sample/Makefile
plugins/gestures/Makefile
],
[])
