SUBDIRS =

if ENABLE_CERTIFICATES_EXTENSION
SUBDIRS += certificates
endif

if ENABLE_DASHBOARD_EXTENSION
SUBDIRS += dashboard
endif

if ENABLE_ERROR_VIEWER_EXTENSION
SUBDIRS += error-viewer
endif

if ENABLE_GESTURES_EXTENSION
SUBDIRS += gestures
endif

if ENABLE_SAMPLE_EXTENSION
SUBDIRS += sample
endif

if ENABLE_SAMPLE_MOZILLA_EXTENSION
SUBDIRS += sample-mozilla
endif

if ENABLE_TABSMENU_EXTENSION
SUBDIRS += tabsmenu
endif

if ENABLE_TOOLBAR_EXTRAS_EXTENSION
SUBDIRS += toolbar-extras
endif

DIST_SUBDIRS = certificates dashboard error-viewer gestures popup-blocker sample sample-mozilla tabsmenu toolbar-extras

EXTRA_DIST =
