SUBDIRS =

if ENABLE_CERTIFICATES_EXTENSION
SUBDIRS += certificates
endif

if ENABLE_DASHBOARD_EXTENSION
SUBDIRS += dashboard
endif

if ENABLE_ERROR_VIEWER_EXTENSION
SUBDIRS += error-viewer
endif

if ENABLE_GESTURES_EXTENSION
SUBDIRS += gestures
endif

if ENABLE_PAGE_INFO_EXTENSION
SUBDIRS += page-info
endif

if ENABLE_SAMPLE_EXTENSION
SUBDIRS += sample
endif

if ENABLE_SELECT_STYLESHEET_EXTENSION
SUBDIRS += select-stylesheet
endif

if ENABLE_SAMPLE_MOZILLA_EXTENSION
SUBDIRS += sample-mozilla
endif

if ENABLE_SMART_BOOKMARKS_EXTENSION
SUBDIRS += smart-bookmarks
endif

if ENABLE_TABSMENU_EXTENSION
SUBDIRS += tabsmenu
endif

if ENABLE_TAB_GROUPS_EXTENSION
SUBDIRS += tab-groups
endif

#if ENABLE_TOOLBAR_EXTRAS_EXTENSION
#SUBDIRS += toolbar-extras
#endif

DIST_SUBDIRS = certificates dashboard error-viewer gestures sample sample-mozilla smart-bookmarks tabsmenu tab-groups

EXTRA_DIST =
