SUBDIRS =

if ENABLE_ACTIONS_EXTENSION
SUBDIRS += actions
endif

if ENABLE_ADBLOCK_EXTENSION
SUBDIRS += adblock
endif

if ENABLE_BOOKMARKS_TRAY_EXTENSION
SUBDIRS += bookmarks-tray
endif

if ENABLE_CERTIFICATES_EXTENSION
SUBDIRS += certificates
endif

if ENABLE_DASHBOARD_EXTENSION
SUBDIRS += dashboard
endif

if ENABLE_ERROR_VIEWER_EXTENSION
SUBDIRS += error-viewer
endif

if ENABLE_EXTENSIONS_MANAGER_UI_EXTENSION
SUBDIRS += extensions-manager-ui
endif

if ENABLE_FIND_EXTENSION
SUBDIRS += find
endif

if ENABLE_GESTURES_EXTENSION
SUBDIRS += gestures
endif

if ENABLE_NET_MONITOR_EXTENSION
SUBDIRS += net-monitor
endif

if ENABLE_PAGE_INFO_EXTENSION
SUBDIRS += page-info
endif

if ENABLE_SAMPLE_EXTENSION
SUBDIRS += sample
endif

if ENABLE_SAMPLE_MOZILLA_EXTENSION
SUBDIRS += sample-mozilla
endif

if ENABLE_SELECT_STYLESHEET_EXTENSION
SUBDIRS += select-stylesheet
endif

if ENABLE_SIDEBAR_EXTENSION
SUBDIRS += sidebar
endif

if ENABLE_SMART_BOOKMARKS_EXTENSION
SUBDIRS += smart-bookmarks
endif

if ENABLE_TABSMENU_EXTENSION
SUBDIRS += tabsmenu
endif

if ENABLE_TAB_GROUPS_EXTENSION
SUBDIRS += tab-groups
endif

#if ENABLE_TOOLBAR_EXTRAS_EXTENSION
#SUBDIRS += toolbar-extras
#endif

if ENABLE_TAB_STATES_EXTENSION
SUBDIRS += tab-states
endif

DIST_SUBDIRS = actions adblock bookmarks-tray certificates dashboard error-viewer extensions-manager-ui find gestures page-info sample sample-mozilla select-stylesheet sidebar smart-bookmarks tab-groups tab-states tabsmenu net-monitor

EXTRA_DIST =
