include $(top_srcdir)/gnome-doc-utils.make

DOC_MODULE = epiphany-extensions
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = \
	figures/epi-ext-action-create.png 		\
	figures/epi-ext-action-use.png			\
	figures/epi-ext-adblocker.png			\
	figures/epi-ext-gestures-back.png		\
	figures/epi-ext-gestures-close.png		\
	figures/epi-ext-gestures-close-2.png		\
	figures/epi-ext-gestures-forward.png		\
	figures/epi-ext-gestures-fullscreen.png		\
	figures/epi-ext-gestures-homepage.png		\
	figures/epi-ext-gestures-new-tab.png		\
	figures/epi-ext-gestures-new-window.png		\
	figures/epi-ext-gestures-next-tab.png		\
	figures/epi-ext-gestures-prev-tab.png		\
	figures/epi-ext-gestures-reload.png		\
	figures/epi-ext-gestures-stop.png		\
	figures/epi-ext-gestures-up.png			\
	figures/epi-ext-gestures-view-source.png	\
	figures/epi-ext-gestures-view-source-2.png	\
	figures/epi-ext-sidebar.png			\
	figures/epi-ext-tabgroups.png

DOC_LINGUAS = es fr oc sv

dist-hook: doc-dist-hook
