SUBDIRS =

EXTRA_DIST =				\
	EphyUtils.h			\
	ephy-bookmarks-menu.h		\
	ephy-debug.h			\
	ephy-embed-dialog.h		\
	ephy-file-helpers.h		\
	eel-gconf-extensions.h		\
	egg-editable-toolbar.h		\
	egg-toolbars-model.h		\
	eggtrayicon.h			\
	ephy-favicon-cache.h		\
	ephy-gui.h			\
	ephy-prefs.h			\
	ephy-file-chooser.h
