SUBDIRS =

if ENABLE_PLUGIN_SAMPLE
SUBDIRS += sample
endif

if ENABLE_PLUGIN_GESTURES
SUBDIRS += gestures
endif

if ENABLE_PLUGIN_TABSMENU
SUBDIRS += tabsmenu
endif

if ENABLE_PLUGIN_ZOOM_PERSISTENCE
SUBDIRS += zoom-persistence
endif

if ENABLE_PLUGIN_DASHBOARD
SUBDIRS += dashboard
endif

DIST_SUBDIRS = sample gestures tabsmenu zoom-persistence dashboard

EXTRA_DIST =
